# Flowers

./: .gitignore
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: health.py  router.py
backend/app/core/: config.py
backend/app/db/: models_registry.py  session.py
backend/app/modules/categories/: models.py  repository.py  router.py  schemas.py
backend/flowers_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
